--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <div class="form-field">
     <label class="form-field" for="phone">Телефон</label>
     <input class="form-input" type="tel" name="phone-number" id="phone" />
-    <svg class="form-icon">
+    <svg class="form-icon" width="18" height="18">
         <use href="./img/icons.svg#phone"></use>
     </svg>
 </div>
@@ -79,7 +79,7 @@
 <div class="form-field">
     <label for="email">Пошта</label>
     <input class="form-input" type="mail" name="email" id="email" />
-    <svg class="form-icon">
+    <svg class="form-icon" width="18" height="18">
         <use href="./img/icons.svg#email"></use>
     </svg>
 </div>
