--- a/index.html
+++ b/index.html
@@ -91,14 +91,12 @@
 </div>
 
 <div>
-    <input type="checkbox" name="policy" id="policy">
-    <label for="policy">Погоджуюся з розсилкою та приймаю <a class="policy-link" href="">Умови договору</a></label>
-    <div class="checkbox">
-        
-    </div>
+    
+    <label><input class="checkbox" type="checkbox" name="policy"/><span class="checkbox-icon"></span>Погоджуюся з розсилкою та приймаю <a class="policy-link" target="_blank" href="">Умови договору</a></label>
+   
 </div>
 
-<button class="signup-btn form" type="submit">Відправити</button>
+<button class="contact-btn" type="submit">Відправити</button>
 
 </form>
         </div>
