--- a/portfolio.html
+++ b/portfolio.html
@@ -245,10 +245,21 @@
                </li>
             </ul>
          </li>
-
+         <li class="footer-block signup-block">
+            <h3 class="title footer-title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h3>
+            <form class="signup-form" name="signup-form" autocomplete="on">
+               <input class="signup-window" type="email" name="email" id="user_email" placeholder="E-mail" />
+               <button class="signup-btn" type="submit">Підписатися
+                  <svg class="signup-icon" width="24" height="24" viewBox="0 0 24 24">
+                     <use href="./img/icons.svg#send"></use>
+                  </svg>
+               </button>
+            </form>
+         </li>
       </ul>
    </div>
 </footer>
+<script src="./js/modal.js"></script>
 </body>
 
 </html>
